--- a/assets/popup.css
+++ b/assets/popup.css
@@ -50,6 +50,14 @@ h3 {
     font-weight: 600;
 }
 
+p {
+    padding: .5rem;
+    margin: 0rem;
+    font-size: small;
+    line-height: 150%;
+    font-weight: 300;
+}
+
 /* Insight information */
 .insights {
     width: 100%;
@@ -74,6 +82,8 @@ h3 {
     margin-bottom: 1.5rem;
 
     box-shadow: 5px 5px 10px gray;
+
+    cursor: pointer;
 }
 
 /* Individual insight title structure */
@@ -109,6 +119,7 @@ h3 {
 /* Slider styles */
 .insight__slider {
 
+    cursor: pointer;
     padding: 0;
     margin: 0;
     height: 8px;
@@ -124,4 +135,17 @@ h3 {
     width: 3px;
     height: 11px;
     background: black;
+}
+
+.horizontal__rule {
+    display: flex;
+    border-width: 0;
+    height: 1px;
+    width: 100%;
+    background-color: lightgray;
+    
+}
+
+.explanation__container {
+    margin-top: 1.5rem;
 }
