Added an absolutely positioned div that overlays onto the iframe and acts as a draggable component. Added rudimentary functionality to draggable component. Modified border left of iframe.

--- a/assets/popup.css
+++ b/assets/popup.css
@@ -201,6 +201,7 @@ p {
     border-color: lightgray;
 }
 
+/* Class for adding link to Rocketstart website */
 .learn__more {
     cursor: pointer;
     font-weight: 500;
