--- a/assets/popup.css
+++ b/assets/popup.css
@@ -117,10 +117,26 @@ p {
     align-items: center;
 }
 
+/* Check marks */
 .insight__icon {
     padding: 0rem .5rem;
 
     color: rgba(139, 192, 74, 1);
+}
+
+/* Wording warning mark */
+.insight__warning {
+    padding: 0rem .5rem;
+
+    color: rgba(247, 152, 36, 1);
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
 }
 
 /* Individual insight number structure */
