--- a/assets/popup.css
+++ b/assets/popup.css
@@ -3,7 +3,7 @@ body {
 }
 
 /* For entire window */
-.container {
+.rocketstart__container {
     display: flex;
     flex-direction: column;
     align-items: center;
