--- a/assets/popup.css
+++ b/assets/popup.css
@@ -59,6 +59,8 @@ h4 {
     font-size: 12px;
     font-weight: 500;
     padding-bottom: .5rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
     /* TODO: change to media queries after design is done */
 }
 
@@ -210,7 +212,6 @@ p {
     border-color: lightgray;
 }
 
-/* TODO: need to find a solution to handle multiple flagged verbs */
 /* Contains both + and - verb examples */
 .verb__example {
     padding: .5rem;
@@ -220,7 +221,6 @@ p {
     align-items: center;
     flex-direction: row;
     display: flex;
-    text-align: center;
     padding-bottom: .5rem;
     /* TODO: change to media queries after design is done */
 }
@@ -229,7 +229,6 @@ p {
     align-items: center;
     flex-direction: row;
     display: flex;
-    text-align: center;
     padding-bottom: .5rem;
     /* TODO: change to media queries after design is done */
 }
